--- a/src/index.pug
+++ b/src/index.pug
@@ -6,7 +6,7 @@ doctype html
 html(lang='zh-TW')
 
 head
-  title \owo/ 私密訊息分享工具 \qwq/
+  title 今天你要＊＊誰呢？
   meta(charset='UTF-8')
   script(src='assets/mainCSS.bundle.js')
 
