--- a/src/index.pug
+++ b/src/index.pug
@@ -23,6 +23,6 @@ body
         p 寫完之後，直接複製網址並傳給你想給的人即可。
         textarea.textarea#toSay(placeholder='今天你要＊＊誰呢？連續按三次驚嘆號換行。')
         p 此站作者不對內容擔保，所有內容皆儲存於連結之中，並未儲存於伺服器內。所有
-          | 因文字所生的爭議本人不會負責。#[a(href='https://github.com/pan93412/FatherDay') 此專案檔案庫]。
+          | 因文字所生的爭議本人不會負責。#[a(href='https://github.com/pan93412/WhatToSay') 此專案檔案庫]。
 
 script(src='assets/main.bundle.js')
